--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "codegen": "graphql-codegen-esm --config codegen.cjs",
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "next start -p 3005",
         "export": "next export",
         "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
